@@ -2,10 +2,21 @@
 
 💠 Developed this Stand-Alone application as the first semester's final project for the GDSE program at IJSE.
 
-💠 Create a MySQL database and execute queries in src/main/java/lk/ijse/gdse/db/script.sql using database client.
-
-💠 Setup Database Connection on 13 line of src/main/java/lk/ijse/gdse/db/DBConnection.java
-
+## 🛠️ SETUP
+<ul>
+<li>Create a MySQL database and execute queries in src/main/java/lk/ijse/gdse/db/script.sql using database client.</li>
+<li>Setup Database Connection on 13 line of src/main/java/lk/ijse/gdse/db/DBConnection.java</li>
+<li>ADD this VM option for run configurations.
+      --module-path
+      "PATH_TO_YOUR_SDK"
+      --add-modules
+      javafx.controls,javafx.fxml
+      --add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED
+      --add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED
+      --add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
+      --add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED
+</li>
+</ul>
 Happy coding! 😊
 
 
